--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,4 @@ matrix:
       node_js: 10
       script:
         - npm install markdownlint-cli
-        - markdownlint --config .markdownlint.json workshop
-
+        - markdownlint --config .markdownlint.json --ignore workshop/SUMMARY.md workshop
